--- a/python/hw_sim_fwk/ui/mainWindow.ui
+++ b/python/hw_sim_fwk/ui/mainWindow.ui
@@ -637,9 +637,9 @@
       <widget class="QLabel" name="lblVersion">
        <property name="geometry">
         <rect>
-         <x>68</x>
+         <x>78</x>
          <y>26</y>
-         <width>181</width>
+         <width>171</width>
          <height>41</height>
         </rect>
        </property>
@@ -652,7 +652,7 @@
         <rect>
          <x>12</x>
          <y>28</y>
-         <width>50</width>
+         <width>61</width>
          <height>20</height>
         </rect>
        </property>
@@ -1295,12 +1295,38 @@
         <rect>
          <x>141</x>
          <y>30</y>
-         <width>51</width>
+         <width>71</width>
          <height>16</height>
         </rect>
        </property>
        <property name="text">
         <string>seconds</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="gbTest">
+      <property name="geometry">
+       <rect>
+        <x>484</x>
+        <y>408</y>
+        <width>251</width>
+        <height>80</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>Test</string>
+      </property>
+      <widget class="QCheckBox" name="cbTest">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>24</y>
+         <width>61</width>
+         <height>17</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>on</string>
        </property>
       </widget>
      </widget>
